openapi.yaml изменен
