# src/main/kotlin/com/cleaningapp/backend/household/HouseholdController.kt
@@ -13,7 +13,7 @@ import org.springframework.web.bind.annotation.RestController
 import java.util.UUID
 
 @RestController
-@RequestMapping("/api/household")
+@RequestMapping("/api/households")
 class HouseholdController(
     private val householdService: HouseholdService,
 ) {
